<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.calcmedie.AvgSemester"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/editText"
        android:layout_width="69dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textView" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/teza_select"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textView"
        android:layout_marginTop="43dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="66dp"
        android:layout_height="34dp"
        android:text="@string/teza"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkBox"
        app:layout_constraintRight_toLeftOf="@+id/editText"
        app:layout_constraintLeft_toRightOf="@+id/checkBox" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="50dp"
        android:layout_height="22dp"
        android:text="@string/note"
        android:visibility="invisible"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="74dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="81dp"
        android:layout_height="47dp"
        android:text="@string/nota_urm"
        app:layout_constraintRight_toLeftOf="@+id/editText2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="47dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculeaza"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/sterge"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="67dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        app:layout_constraintRight_toLeftOf="@+id/button4"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />
</android.support.constraint.ConstraintLayout>
</ScrollView>