<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.calcmedie.FinalAvg">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="78dp"
        android:layout_height="22dp"
        android:text="@string/semI"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/editText3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="79dp"
        android:layout_height="26dp"
        android:text="@string/semII"
        app:layout_constraintLeft_toRightOf="@+id/editText3"
        app:layout_constraintRight_toLeftOf="@+id/editText4"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText3" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="73dp"
        android:layout_height="54dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintRight_toLeftOf="@+id/textView6"
        app:layout_constraintLeft_toRightOf="@+id/textView5"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="60dp"
        android:layout_height="54dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textView6"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="97dp"
        android:text="@string/calculeaza"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>
